test/resources/inspections/latex/inclusionloop/included.tex
<error descr="File inclusion loop found for files main.tex and included.tex.">\input{main.tex</error>}
